CASSANDRA-18725: IsolatedJmx should only remove the endpoints it created when stopping
IsolatedJmx previously cleared the entire TCPEndpoint map field, which could remove the endpoints from other,
running instances. Now, we make sure to only clear the endpoints created by that instance, which allows for
other instances to keep running and for this instance to restart without issues.
Also reworked the JMX tests to exercise more of the JMX functionality to help find leaks and other
potential issues like this.

Additional changes include setting up `looperEverythingTest` to add increased testing like the JMX looper
test did, so we can add more extensive exercise of native/gossip/network features in the future.